syntax = "proto3";
option go_package = "./censys/proto";

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
  bool success = 2;
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetResponse {
  bool success = 1;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  bool success = 1;
}


service KvStoreService {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Set(SetRequest) returns (SetResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}
